<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/qpinfo3_ll1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
       	android:layout_marginRight="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="5dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TableRow
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		        <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:layout_weight="3"
		            android:text="@string/txt_info_21"/>

		        <EditText
		            android:id="@+id/qpinfo3_tag"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:enabled="false"
		            android:inputType="text" />

		   </TableRow>
		   <TableRow
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		        <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:layout_weight="3"
		            android:text="@string/txt_info_22"/>
		        <EditText
		            android:id="@+id/qpinfo3_jgid"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:inputType="text"
		            android:enabled="false"
		            android:maxLength="12"/>
		   </TableRow>
		   <TableRow
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		        <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:layout_weight="3"
		            android:text="@string/txt_info_23"/>
		        <Spinner
		            android:id="@+id/qpinfo3_jgnum"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:entries="@array/jgnum"
		            android:layout_weight="2"/>
		   </TableRow>

            <TableRow
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		        <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:layout_weight="3"
		            android:text="@string/txt_info_1"/>
		        <Spinner
		            android:id="@+id/qpinfo3_1"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"/>
		   </TableRow>
            <TableRow
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		        <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:layout_weight="3"
		            android:text="@string/txt_info_2"/>
		        <Spinner
		            android:id="@+id/qpinfo3_2"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"/>
		   </TableRow>
		  <TableRow
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		        <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:layout_weight="3"
		            android:text="@string/txt_info_8"/>
		        <Spinner
		            android:id="@+id/qpinfo3_0"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"/>
		   </TableRow>		   
		   
            <TableRow
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		        <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:layout_weight="3"
		            android:text="@string/txt_info_6"/>
		        <Spinner
		            android:id="@+id/qpinfo3_3"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"/>
		   </TableRow>
		   <TableRow
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		        <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:layout_weight="3"
		            android:text="@string/txt_info_20"/>
		        <hsic.ui.EditDate
		            android:id="@+id/qpinfo3_5"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:inputType="text"/>
		   </TableRow>	

<!-- 		   <TableRow
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		        <TextView
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:layout_weight="3"
		            android:text="@string/txt_info_11"/>
		        <EditText
		            android:id="@+id/info_11"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:inputType="numberDecimal"/>
		   </TableRow>	 -->	
		  <hsic.ui.MyListView
		        android:id="@+id/qpinfo3_list"
		        android:layout_width="match_parent"
		        android:layout_height="0dip"
		        android:layout_marginBottom="5dp"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
		        android:layout_marginTop="5dp"
		        android:layout_weight="1">
		
		    </hsic.ui.MyListView>
        </LinearLayout>
    </ScrollView>
    
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="vertical" >
		<Button
            android:id="@+id/qpinfo3_clean"
            android:layout_marginLeft="2dp"
        	android:layout_marginRight="2dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_string_14" />
		<Button
            android:id="@+id/qpinfo3_add"
            android:layout_marginLeft="2dp"
        	android:layout_marginRight="2dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_string_27" />
		<Button
            android:id="@+id/qpinfo3_save"
            android:layout_marginLeft="2dp"
        	android:layout_marginRight="2dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_string_21" />
		<Button
            android:id="@+id/qpinfo3_read"
            android:layout_marginLeft="2dp"
        	android:layout_marginRight="2dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_string_22" />
		</TableRow>
</LinearLayout>
<LinearLayout
	    android:id="@+id/qpinfo3_ll2"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_marginLeft="5dp"
       	android:layout_marginRight="5dp"
       	android:visibility="gone"
	    android:orientation="vertical" >
	<ScrollView
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_marginTop="5dp"
	        android:layout_weight="1" >
	
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
		        
	 <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/txt_info_3"/>
        <EditText
            android:id="@+id/info3_item_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"
            android:maxLength="12"/>
   </TableRow>
   <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/txt_info_4"/>
        <EditText
            android:id="@+id/info3_item_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"/>
   </TableRow>
   <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/txt_info_5"/>
        <EditText
            android:id="@+id/info3_item_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"/>
   </TableRow>
	<EditText
          android:id="@+id/info3_item_3s"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:enabled="false"
          android:inputType="text"/>
	   <TableRow
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="3"
	            android:text="@string/txt_info_7"/>
	        <hsic.ui.EditDate
	            android:id="@+id/info3_item_4"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:inputType="text"/>
	   </TableRow>
	   <TableRow
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        <TextView
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="3"
	            android:text="@string/txt_info_9"/>
	        <EditText
	            android:id="@+id/info3_item_5"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:inputType="numberDecimal"/>
	   </TableRow>

	<TableRow
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content">
	     <TextView
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_gravity="center"
	         android:layout_weight="3"
	         android:text="@string/txt_info_10"/>
	     <EditText
	         android:id="@+id/info3_item_7"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_weight="2"
	         android:inputType="numberDecimal"/>
	</TableRow>
	<TableRow
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content">
	     <TextView
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_gravity="center"
	         android:layout_weight="3"
	         android:text="@string/txt_info_12"/>
	     <EditText
	         android:id="@+id/info3_item_8"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_weight="2"
	         android:inputType="numberDecimal"/>
	</TableRow>
	<TableRow
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content">
	     <TextView
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_gravity="center"
	         android:layout_weight="3"
	         android:text="@string/txt_info_13"/>
	     <EditText
	         android:id="@+id/info3_item_9"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_weight="2"
	         android:inputType="numberDecimal"/>
	</TableRow>
	<TableRow
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content">
	     <TextView
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_gravity="center"
	         android:layout_weight="3"
	         android:text="@string/txt_info_14"/>
	     <EditText
	         android:id="@+id/info3_item_10"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_weight="2"
	         android:inputType="numberDecimal"/>
	</TableRow>
	<TableRow
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content">
	     <TextView
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_gravity="center"
	         android:layout_weight="3"
	         android:text="@string/txt_info_15"/>
	     <EditText
	         android:id="@+id/info3_item_11"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_weight="2"
	         android:inputType="text"/>
	</TableRow>
	<TableRow
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content">
	     <TextView
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_gravity="center"
	         android:layout_weight="3"
	         android:text="@string/txt_info_16"/>
	     <EditText
	         android:id="@+id/info3_item_12"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_weight="2"
	         android:inputType="numberDecimal"/>
	</TableRow>
	<TableRow
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content">
	     <TextView
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_gravity="center"
	         android:layout_weight="3"
	         android:text="@string/txt_info_17"/>
	     <EditText
	         android:id="@+id/info3_item_13"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_weight="2"
	         android:enabled="false"
	         android:inputType="number"/>
	</TableRow>
	<TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/txt_info_18"/>
        <EditText
            android:id="@+id/info3_item_14"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"
            android:inputType="number"/>
   </TableRow>
   	<TableRow
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content">
	     <TextView
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_gravity="center"
	         android:layout_weight="3"
	         android:text="@string/txt_info_19"/>
	     <EditText
	         android:id="@+id/info3_item_6"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_weight="2"
	         android:enabled="false"
	         android:inputType="number"/>
	</TableRow>
	</LinearLayout>
	</ScrollView>
	<TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="vertical" >
		<Button
            android:id="@+id/info3_item_back"
            android:layout_marginLeft="2dp"
        	android:layout_marginRight="2dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_string_2" />
		<Button
            android:id="@+id/info3_item_save"
            android:layout_marginLeft="2dp"
        	android:layout_marginRight="2dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_string_28" />	
     </TableRow>
	</LinearLayout> 

</LinearLayout>